Aplica sugestões do orientador

--- a/document/bibliography.bib
+++ b/document/bibliography.bib
@@ -79,8 +79,8 @@
 }
 
 @online{scipy,
-  title={SciPy},
-  url={https://www.scipy.org},
+  title={Scientific computing tools for Python},
+  url={https://www.scipy.org/about.html},
   urldate={2021-05-07}
 }
 
