Adiciona mais detalhes à bibliografia

--- a/document/bibliography.bib
+++ b/document/bibliography.bib
@@ -1,26 +1,35 @@
 @book{oppenheim,
   title={Discrete-Time Signal Processing},
   author={Alan V. Oppenheim and Ronald W. Schafer and John R. Buck},
+  edition={2},
+  date={1998-12-31},
+  isbn={0-13-754920-2},
   publisher={Prentice Hall}
 }
 
 @book{diniz,
   title={Digital Signal Processing},
   author={Paulo S. R. Diniz and Eduardo A. B. da Silva and Sergio L. Netto},
+  edition={2},
+  date={2010-09},
+  isbn={978-0521887755},
   publisher={Cambridge University Press}
 }
 
 @book{lathi,
   title={Modern Digital and Analog Communication Systems},
   author={B. P. Lathi and Zhi Ding},
+  edition={4},
+  date={2009-07-02},
+  isbn={978-0-19-538493-2},
   publisher={Oxford University Press}
 }
 
-@article{selesnick,
+@book{selesnick,
   title={Linear-Phase FIR Filter Design by Least Squares},
   author={Ivan Selesnick},
-  publisher={Benjamin Fite and Adan Galvan andIvan Selesnick},
-  date={2002-08-05},
+  publisher={OpenStax CNX},
+  date={2005-08-09},
   url={https://cnx.org/contents/eb1ecb35-03a9-4610-ba87-41cd771c95f2@7},
   urldate={2021-05-07}
 }
@@ -45,7 +54,9 @@
   title={Design Patterns},
   subtitle={Elements of Reusable Object-Oriented Software},
   author={Erich Gamma and John Vlissides and Richard Helm and Ralph Johnson},
-  date={1994-10-21}
+  publisher={Addison-Wesley Professional},
+  date={1994-10-21},
+  isbn={978-0201633610}
 }
 
 @online{pickle,
